--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -10,17 +10,17 @@
         Edit
     
   .messages__main
-    .message__sender-a
+    .message-top__sender
       yuya
-    .message__date-a
+    .message-top__date
       2019/11/20(Wed) 17:50:30
-    .message__details-a
+    .message-top__details
       こんにちは
-    .message__sender-b
+    .message-bottom__sender
       taro
-    .message__date-b
+    .message-bottom__date
       2019/11/20(Wed) 17:55:30
-    .message__details-b
+    .message-bottom__details
       さようなら
 
   .form
