--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -3,22 +3,22 @@
     .header__user_name
       YUYA
     .header__edit
-    = link_to "#", class: "headers__btn-a" do
+    = link_to "#", class: "headers__btn-top" do
       = icon('fa', 'edit')
     .header__setting
-    = link_to "#", class: "headers__btn-b" do
+    = link_to "#", class: "headers__btn-bottom" do
       = icon('fa', 'cog')
 
 
   .groups
-    .group-a
-      .group-a__name-top
+    .group-soccer
+      .group-soccer__name-top
         soccer
-      .group__message-top
+      .group-soccer__message-top
         nice!
-    .group-b
-      .group__name-bottom
+    .group-baseball
+      .group-baseball__name-bottom
         baseball
-      .group__message-bottom
+      .group-baseball__message-bottom
         good!
 
