--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,19 @@
 @import "./reset";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
-@import "./shared"
+@import "./shared";
+
+// @import "modules/user";
+
+// @import "font-awesome";
+// @import "config/colors";
+// @import "config/size";
+// @import "config/reset";
+// @import "mixins/mixin";
+// @import "mixins/vendor_prefix";
+// @import "modules/side_bar";
+// @import "modules/chat";
+// @import "messages/messages.scss"
+
+@import "config/colors";
+@import "modules/flash";
