--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -18,4 +18,4 @@
           .field-input
             = f.email_field :email
         .actions
-          = f.submit "Update", class: 'btn
+          = f.submit "Update", class: 'btn'
