--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
 @import "./font-awesome";
 @import "./shared";
 
-// @import "modules/user";
+@import "modules/user";
 
 // @import "font-awesome";
 // @import "config/colors";
@@ -13,7 +13,8 @@
 // @import "mixins/vendor_prefix";
 // @import "modules/side_bar";
 // @import "modules/chat";
-// @import "messages/messages.scss"
+// @import "messages/messages.scss";
 
 @import "config/colors";
 @import "modules/flash";
+@import "modules/group";
