--- a/app/assets/stylesheets/_shared.scss
+++ b/app/assets/stylesheets/_shared.scss
@@ -104,37 +104,41 @@
     overflow: scroll;
     height: calc(100% - 100px - 90px);
     .messages {
-      .message-top__sender{
-        font-size: 16px;
-        font-weight: bold;
-        color: #434A54;
-        padding-top: 46px;
+      .message-top{
+        &__sender{
+          font-size: 16px;
+          font-weight: bold;
+          color: #434A54;
+          padding-top: 46px;
+        }
+        &__date{
+          font-size: 12px;
+          color: #999999;
+          padding-top: 46px;
+        }
+        &__details{
+          font-size: 14px;
+          color: #434A54;
+          padding-top: 10px;
+        }
       }
-      .message-top__date{
-        font-size: 12px;
-        color: #999999;
-        padding-top: 46px;
-      }
-      .message-top__details{
-        font-size: 14px;
-        color: #434A54;
-        padding-top: 10px;
-      }
-      .message-bottom__sender{
-        font-size: 16px;
-        font-weight: bold;
-        color: #434A54;
-        padding-top: 40px;
-      }
-      .message-bottom__date{
-        font-size: 12px;
-        color: #999999;
-        padding-top: 40px;
-      }
-      .message-bottom__details{
-        font-size: 14px;
-        color: #434A54;
-        padding-top: 10px;
+      .message-bottom{
+        &__sender{
+          font-size: 16px;
+          font-weight: bold;
+          color: #434A54;
+          padding-top: 40px;
+        }
+        &__date{
+          font-size: 12px;
+          color: #999999;
+          padding-top: 40px;
+        }
+        &__details{
+          font-size: 14px;
+          color: #434A54;
+          padding-top: 10px;
+        }
       }
     }
   } 
